--- a/ModulOdbiorczy.ioc
+++ b/ModulOdbiorczy.ioc
@@ -38,23 +38,24 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD15
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PD12
-Mcu.Pin8=PD13
-Mcu.Pin9=PD14
-Mcu.PinsNb=18
+Mcu.Pin10=PD14
+Mcu.Pin11=PD15
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PA1
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PD12
+Mcu.Pin9=PD13
+Mcu.PinsNb=19
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=4.17.0
@@ -63,6 +64,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -73,6 +75,11 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+PA1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PA1.GPIO_Label=NRF_IRQ
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA1.Locked=true
+PA1.Signal=GPXTI1
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -180,6 +187,8 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CalculateBaudRate=10.5 MBits/s
 SPI1.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
