--- a/ModulOdbiorczy.ioc
+++ b/ModulOdbiorczy.ioc
@@ -58,8 +58,8 @@ Mcu.Pin9=PD13
 Mcu.PinsNb=19
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=4.17.0
-MxDb.Version=DB.4.0.170
+MxCube.Version=4.18.0
+MxDb.Version=DB.4.0.180
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true
@@ -105,7 +105,7 @@ PA7.Signal=SPI1_MOSI
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
-PCC.MXVersion=4.17.0
+PCC.MXVersion=4.18.0
 PCC.PartNumber=STM32F407VGTx
 PCC.Seq0=0
 PCC.Series=STM32F4
@@ -136,9 +136,11 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407VGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.13.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.14.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
